--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.hans.praktikum11.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/change_language"
-        app:showAsAction="never" />
+        android:id="@+id/change_language_settings"
+        app:showAsAction="never"
+        android:title="@string/change_language" />
 </menu>
